unpackaged/main/default/objects/SubscriberDataSources__mdt/SubscriberDataSources__mdt.object-meta.xml
<CustomObject>
    <label>SubscriberDataSource</label>
    <pluralLabel>SubscriberDataSources</pluralLabel>
</CustomObject>