unpackaged/main/default/objects/SubscriberDataSources__mdt/fields/DataSource__c.field-meta.xml
<CustomField>
    <fullName>DataSource__c</fullName>
    <label>Data Source</label>
    <length>25</length>
    <type>Text</type>
</CustomField>