unpackaged/main/default/objects/SubscriberDataSources__mdt/fields/MarketingSource__c.field-meta.xml
<CustomField>
    <fullName>MarketingSource__c</fullName>
    <label>Marketing Source</label>
    <length>3</length>
    <type>Text</type>
</CustomField>