unpackaged/main/default/objects/SubscriberDataSources__mdt/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Source System</label>
    <length>25</length>
    <type>Text</type>
</CustomField>