unpackaged/main/default/objects/SubscriberDataSources__mdt/fields/WelcomeSource__c.field-meta.xml
<CustomField>
    <fullName>WelcomeSource__c</fullName>
    <label>Welcome Source</label>
    <length>3</length>
    <type>Text</type>
</CustomField>